--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -149,7 +149,8 @@
       %div.testTOCheck.mt-2
         %div.flex
           %div.mar-r.iconOrangeCircle
-            %div icon
+            %div
+              %i.fa.fa-phone.colorAndSizeIconReminders
           %div.mt-1
             %h3 Company Name - Today at 2pm
             %p.m0 Lead Name
@@ -167,7 +168,8 @@
       %div.testTOCheck.mt-2
         %div.flex
           %div.mar-r.iconOrangeCircle
-            %div icon
+            %div  
+              %i.fa.fa-envelope.colorAndSizeIconReminders
           %div.mt-1
             %h3 Company Name - Today at 2pm
             %p.m0 Lead Name
@@ -185,7 +187,7 @@
       %div.testTOCheck.mt-2
         %div.flex
           %div.mar-r.iconOrangeCircle
-            %div icon
+            %i.fa.fa-at.colorAndSizeIconReminders
           %div.mt-1
             %h3 Company Name - Today at 2pm
             %p.m0 Lead Name
