--- a/app/views/shared/_add_comment.html.haml
+++ b/app/views/shared/_add_comment.html.haml
@@ -7,6 +7,6 @@
   #campaign_comment{ hidden_if(collapsed) }
     %div
       %label 
-        Add Notes
+        Add Note
     %div
       = text_area_tag :comment_body, @comment_body, class: "customTextAreaLeads"
