--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -848,9 +848,10 @@ table.asset_attributes {
   background-color: rgb(255, 255, 255);
   box-shadow: 2px 2px 20.1px rgba(0, 0, 0, 0.5);
   width: 99%;
-  height: 300px;
+  height: auto;
   border-radius: 10px;
-  padding: 10px;
+  padding: 20px 20px 30px 20px !important;
+
 }
 
 .leadsBoxContainer{
@@ -1395,6 +1396,20 @@ width: 240px;
   font-size: 18px !important;
   color: white !important;
   font-weight: bolder !important;
+}
+
+.fs-30{
+  font-size: 30px !important;
+}
+
+.f-w-100{
+  font-weight: 100;
+}
+
+.emailProfile{
+  font-size: 25px;
+  margin-top: -10px;
+  font-weight: 200;
 }
 
 @media(max-width: 991px){
