doing cool stuff for front end crm

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -853,6 +853,10 @@ table.asset_attributes {
   padding: 20px 20px 30px 20px !important;
 }
 
+.testBoxLarge-active{
+  box-shadow: 2px 2px 20.1px rgba(255, 107, 69, 0.5);
+}
+
 .border-reminders-bottom{
   border-bottom: 1px solid #e7e5e5
 }
@@ -911,6 +915,10 @@ table {
 .fs-14{
 font-size: 14px;
 }
+
+.fs-16{
+  font-size: 16px;
+  }
 
 .tableBorder{
   border: 1px solid #b8b4b4;
