fixing small css details and some redirecs

--- a/app/views/campaigns/_new.html.haml
+++ b/app/views/campaigns/_new.html.haml
@@ -29,3 +29,12 @@
       }
     });
   }
+
+  function closePopup() {
+    console.log("render pop up campaing")
+    var popupContainer = document.getElementById('popupContainerCampaign');
+    if (popupContainer) {
+      popupContainer.classList.remove('show');
+      console.log("Popup closed");
+    }
+  }
