--- a/app/views/campaigns/destroy.js.haml
+++ b/app/views/campaigns/destroy.js.haml
@@ -2,5 +2,6 @@
 - @entity = instance_variable_get("@#{entity_name}")
 
 $('##{dom_id(@entity)}').css('background-color', '#ffe4e1').slideUp(250)
-= refresh_sidebar(:index)
+$('#exampleModalDistroyCampaigns').modal('show');
+-# = refresh_sidebar(:index)
 $('#paginate').replaceWith('#{ j render(partial: "shared/paginate_with_per_page") }');
